syntax = "proto3";

package manager;
option go_package = "protobuf/manager/golang/tokenpb";

import "google/protobuf/empty.proto";

message GetPublicKeyResponse {
  string public_key = 1;
}

service TokenService {
  rpc GetPublicKey (google.protobuf.Empty) returns (GetPublicKeyResponse);
}
